--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -63,9 +63,9 @@
         </table>
     </main>
 
-    <footer>
-        <p>&copy; 2024 TechCon. All Rights Reserved.</p>
-    </footer>
-    
+<footer>
+    <p>&copy; 2024 TechCon. All Rights Reserved. Copyright</p>
+</footer>
+
 </body>
 </html>
