--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -23,7 +23,7 @@
 
         <section>
             <h2>Get in Touch</h2>
-            <p>Email: <a href="mailto:info@techcon2024.com">info@techcon2024.com</a></p>
+            <p>Email: <a href="mailto:markgichora7@gmail.com">info@techcon2024.com</a></p>
             <p>Follow us on:</p>
             <ul>
                 <li><a href="https://facebook.com/TechCon2024" target="_blank">Facebook</a></li>
