--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -1,70 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Schedule for TechCon 2024</title>
-  </head>
-  <body>
+</head>
+<body>
+    
     <header>
-      <h1>Schedule for TechCon 2024</h1>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="register.html">Register</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
+        <h1>Schedule for TechCon 2024</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="register.html">Register</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
-      <h2>Event Schedule</h2>
-      <table>
-        <caption>
-          Detailed Schedule of Events for TechCon 2024
-        </caption>
-
-        <thead>
-          <tr>
-            <th scope="col">Time</th>
-            <th scope="col">Session</th>
-            <th scope="col">Speaker</th>
-          </tr>
-        </thead>
-
-        <tbody>
-          <tr>
-            <td>09:00 AM - 10:00 AM</td>
-            <td>Opening Keynote: The Future of Technology</td>
-            <td>Muriuki Matana Doe</td>
-          </tr>
-          <tr>
-            <td>10:30 AM - 12:00 PM</td>
-            <td>Artificial Intelligence: Beyond the Hype</td>
-            <td>John Ndegwa</td>
-          </tr>
-          <tr>
-            <td>01:00 PM - 02:30 PM</td>
-            <td>Cybersecurity in the Modern World</td>
-            <td>Emily Johnson</td>
-          </tr>
-          <tr>
-            <td>03:00 PM - 04:00 PM</td>
-            <td>Panel Discussion: Emerging Technologies</td>
-            <td>Multiple Speakers</td>
-          </tr>
-          <tr>
-            <td>04:30 PM - 05:30 PM</td>
-            <td>Networking Session</td>
-            <td>-</td>
-          </tr>
-        </tbody>
-      </table>
+        <h2>Conference Schedule</h2>
+        <table>
+            <caption>Detailed Schedule of Events for TechCon 2024</caption>
+            <thead>
+                <tr>
+                    <th scope="col">Time</th>
+                    <th scope="col">Session</th>
+                    <th scope="col">Speaker</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>9:00 AM</td>
+                    <td>Opening Keynote</td>
+                    <td>Jane Doe</td>
+                </tr>
+                <tr>
+                    <td>10:30 AM</td>
+                    <td>Emerging Technologies</td>
+                    <td>John Smith</td>
+                </tr>
+            </tbody>
+        </table>
     </main>
 
     <footer>
-      <p>&copy; 2024 TechCon. All Rights Reserved.</p>
+        <p>&copy; 2024 TechCon. All Rights Reserved. Copyright</p>
     </footer>
-  </body>
+
+</body>
 </html>
