--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -6,7 +6,7 @@
     <title>Schedule for TechCon 2024</title>
 </head>
 <body>
-    
+
     <header>
         <h1>Schedule for TechCon 2024</h1>
         <nav>
@@ -46,7 +46,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 TechCon. All Rights Reserved. Copyright</p>
+        <p>&copy; 2024 TechCon. All Rights Reserved. copyright</p>
     </footer>
 
 </body>
